--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
     "antd": "^5.17.4",
+    "framer-motion": "^11.15.0",
+    "lucide-react": "^0.469.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
